--- a/src/components/IVRichTextEditor/iv-rich-text-editor.css
+++ b/src/components/IVRichTextEditor/iv-rich-text-editor.css
@@ -27,3 +27,61 @@
 .ProseMirror > :last-child {
   margin-bottom: 0;
 }
+
+.tiptap {
+  .mention {
+    border-radius: 0.4rem;
+    box-decoration-break: clone;
+    padding: 0.1rem 0.3rem;
+  }
+
+  .member {
+    background-color: #dbeafe;
+    color: #1e40af;
+  }
+
+  .review {
+    background-color: #dcfce7;
+    color: #166534;
+  }
+
+  .group {
+    background-color: #fef3c7;
+    color: #92400e;
+  }
+
+  .reward {
+    background-color: #fce7f3;
+    color: #831843;
+  }
+
+  .quality {
+    background-color: #e0e7ff;
+    color: #3730a3;
+  }
+
+  .tag {
+    background-color: #f3e8fd;
+    color: #6b21a8;
+  }
+
+  .article {
+    background-color: #ecfccb;
+    color: #365314;
+  }
+
+  .leaderboard {
+    background-color: #ecfccb;
+    color: #365314;
+  }
+
+  .buyer {
+    background-color: #fef9c3;
+    color: #854d0e;
+  }
+
+  .collection {
+    background-color: #f1f5f9;
+    color: #0f172a;
+  }
+}
