--- a/src/components/IVRichTextEditor/Mention/SuggestionList.css
+++ b/src/components/IVRichTextEditor/Mention/SuggestionList.css
@@ -49,11 +49,11 @@
   color: #166534;
 }
 
-.suggestion-badge-group {
+.suggestion-badge-membership {
   background-color: #fef3c7;
   color: #92400e;
 }
-
+/* 
 .suggestion-badge-reward {
   background-color: #fce7f3;
   color: #831843;
@@ -62,7 +62,7 @@
 .suggestion-badge-quality {
   background-color: #e0e7ff;
   color: #3730a3;
-}
+} */
 
 .suggestion-badge-tag {
   background-color: #f3e8fd;
