--- a/src/components/IVRichTextEditor/iv-rich-text-editor.css
+++ b/src/components/IVRichTextEditor/iv-rich-text-editor.css
@@ -45,12 +45,12 @@
     color: #166534;
   }
 
-  .mention-group {
+  .mention-membership {
     background-color: #fef3c7;
     color: #92400e;
   }
 
-  .mention-reward {
+  /* .mention-reward {
     background-color: #fce7f3;
     color: #831843;
   }
@@ -58,7 +58,7 @@
   .mention-quality {
     background-color: #e0e7ff;
     color: #3730a3;
-  }
+  } */
 
   .mention-tag {
     background-color: #f3e8fd;
